tests/transpiler/x/scala/pure_global_fold.scala
// Generated by Mochi v0.10.31 on 2025-07-20 02:17:59 GMT+7
object Main extends App {
  val k: Int = 2
  def inc(x) = {
    (x + k)
  }

  println(inc(3))
}
